[package]
name = "bracket-fluent"
version = "0.1.0"
description = "Fluent integration for the bracket template engine"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"
repository = "https://github.com/uwe-app/bracket-fluent"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
bracket = "^0.5.1"
fluent-templates = "^0.5.16"
serde_json = "^1.0"

[dev-dependencies]
pretty_env_logger = "0.4"
log = "0.4"
unic-langid = "0.9"

[package.metadata.docs.rs]
all-features = true
